--- a/src/Styles/sizes.scss
+++ b/src/Styles/sizes.scss
@@ -5,4 +5,6 @@ $large: 4rem;
 
 $container-width: 64rem;
 
-$tini-padding: $tiny $tiny*4;
+$tiny-padding: $tiny $tiny*4;
+$small-padding: $small $small*4;
+$medium-padding: $medium $medium*4;
