--- a/src/Styles/sizes.scss
+++ b/src/Styles/sizes.scss
@@ -4,6 +4,7 @@ $medium: 2rem;
 $large: 4rem;
 
 $container-width: 64rem;
+$mobile-container-width: 32rem;
 
 $tiny-padding: $tiny $tiny*4;
 $small-padding: $small $small*4;
