--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,12 @@
   -moz-box-sizing: border-box;
 }
 
+html,
+body,
+#root {
+  height: 100%;
+}
+
 body {
   background-color: colors.$white;
   margin: 0;
