--- a/src/Components/ModalPage/ModalPage.module.scss
+++ b/src/Components/ModalPage/ModalPage.module.scss
@@ -7,6 +7,8 @@
     transform: translate(-50%, -50%);
     background-color: transparent;
     border: none;
+    width: fit-content;
+    height: fit-content;
 }
 
 .dialog::backdrop {
